--- a/Desktop/Pages/AdminLogin.xaml
+++ b/Desktop/Pages/AdminLogin.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Desktop.Pages.LoginPage"
+﻿<Page x:Class="Desktop.Pages.AdminLogin"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Desktop.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="LoginPage">
+      Title="AdminLogin">
 
     <Grid Background="{StaticResource BackgroundBrush}">
         <Border Width="400" Height="380" 
@@ -37,9 +37,9 @@
                           Foreground="{StaticResource TextSecondaryBrush}" 
                           FontWeight="SemiBold" FontSize="13"/>
                 <Border BorderBrush="#404040" BorderThickness="1" CornerRadius="4">
-                    <TextBox x:Name="TxtLogin" Height="40" 
+                    <TextBox x:Name="Login" Height="40" 
                             FontSize="14" Padding="12"
-                            KeyDown="TxtLogin_KeyDown"
+                            
                             Background="#2A2A2A"
                             Foreground="{StaticResource TextBrush}"
                             BorderThickness="0"/>
@@ -49,20 +49,20 @@
                           Foreground="{StaticResource TextSecondaryBrush}" 
                           FontWeight="SemiBold" FontSize="13"/>
                 <Border BorderBrush="#404040" BorderThickness="1" CornerRadius="4">
-                    <PasswordBox x:Name="TxtPassword" Height="40" 
+                    <PasswordBox x:Name="Password" Height="40" 
                                 FontSize="14" Padding="12"
-                                KeyDown="TxtPassword_KeyDown"
+                                
                                 Background="#2A2A2A"
                                 Foreground="{StaticResource TextBrush}"
                                 BorderThickness="0"/>
                 </Border>
 
                 <!-- Login Button -->
-                <Button x:Name="BtnLogin" Content="Войти" 
+                <Button x:Name="LoginButton" Content="Войти" 
                        Style="{StaticResource PrimaryButtonStyle}"
                        Height="28" FontSize="15" FontWeight="Bold"
                        Margin="0,25,0,0"
-                       Click="BtnLogin_Click" Width="305"/>
+                       Click="LoginButton_Click" Width="305"/>
 
                 <!-- Error Message -->
                 <Border x:Name="ErrorBorder" Background="#5A0000" 
